# MidenScanBackEnd

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
miden-deserializer/: Cargo.toml
miden-deserializer/src/: lib.rs
src/: Cargo.toml  app.controller.ts  app.module.ts  main.rs  main.ts
src/grpc/: ejemplo-proto  grpc-client.options.ts
src/miden/: funciones.ts  interfaces.ts  miden-rust.service.ts  miden.controller.ts  miden.functions.ts  miden.grpc.options.ts  miden.interfaces.ts  miden.module.ts  miden.service.ts
src/miden/dtos/: GetNotesByIdsDtop.ts  getAccountDetails.ts  getBlockByNumber.ts
