[package]
name = "miden-deserializer"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
#prost = "0.12"  # Comentado temporalmente
#tonic = "0.10"  # Comentado temporalmente
anyhow = "1.0"